Added glad library. Creates window and set a default game loop

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,12 @@ SET(SRCS
 	"${CMAKE_CURRENT_LIST_DIR}/src/main.cpp"
 )
 
+add_library(glad STATIC "src/glad/glad.cpp")
+target_include_directories(glad
+	PUBLIC
+		"${CMAKE_CURRENT_LIST_DIR}/include"
+)
+
 add_library(glfw3 STATIC IMPORTED)
 set_target_properties(glfw3 PROPERTIES
     IMPORTED_LOCATION "${CMAKE_CURRENT_LIST_DIR}/lib/glfw3.lib"
@@ -14,9 +20,9 @@ set_target_properties(glfw3 PROPERTIES
 
 add_executable(ShaderWorkshopMain "${SRCS}")
 set_property(TARGET ShaderWorkshopMain PROPERTY
-  MSVC_RUNTIME_LIBRARY "MultiThreadedDLL$<$<CONFIG:Debug>:Debug>")
-  
-target_link_libraries(ShaderWorkshopMain PRIVATE glfw3 opengl32)
+  MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>DLL")
+
+target_link_libraries(ShaderWorkshopMain PRIVATE glfw3 opengl32 glad)
 
 target_include_directories(ShaderWorkshopMain
 	PUBLIC
