--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,11 @@ PROJECT(ShaderWorkshop CXX)
 #Source Code:
 SET(SRCS
 	"${CMAKE_CURRENT_LIST_DIR}/src/main.cpp"
+	"${CMAKE_CURRENT_LIST_DIR}/src/AssimpHelper.cpp"
+)
+
+SET(HDRS
+	"${CMAKE_CURRENT_LIST_DIR}/src/AssimpHelper.h"
 )
 
 add_library(glad STATIC "src/glad/glad.cpp")
@@ -18,11 +23,16 @@ set_target_properties(glfw3 PROPERTIES
     IMPORTED_LOCATION "${CMAKE_CURRENT_LIST_DIR}/lib/glfw3.lib"
 )
 
+add_library(assimp STATIC IMPORTED)
+set_target_properties(assimp PROPERTIES
+    IMPORTED_LOCATION "${CMAKE_CURRENT_LIST_DIR}/lib/assimp-vc140-mtd.lib"
+)
+
 add_executable(ShaderWorkshopMain "${SRCS}")
 set_property(TARGET ShaderWorkshopMain PROPERTY
   MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>DLL")
 
-target_link_libraries(ShaderWorkshopMain PRIVATE glfw3 opengl32 glad)
+target_link_libraries(ShaderWorkshopMain PRIVATE glfw3 assimp opengl32 glad)
 
 target_include_directories(ShaderWorkshopMain
 	PUBLIC
